--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ section .main {
 
 section img[src*="Barbie_Logo.svg.png"]{
     width: 300px;
+    margin: 8px;
 }
 
 section .main .searchBox {
@@ -65,14 +66,10 @@ section .main .searchBox input[type=text]{
     padding-left: 45px;
     padding-right: 60px;
     border-radius: 40px;
-    border: 1px solid #a20773;
+    border: 2px solid #a20773;
+    background-color: #fff5fb;
     outline: none;
     font-size: 17px;
-}
-
-section .main .searchBox input[type=text] text-area{
-    background-color: #fde6f4;
-
 }
 
 section .main .searchBox .icons{
@@ -115,6 +112,20 @@ section .main .buttons input[type=button]{
     border-radius: 6px;
     border: 1px solid transparent;
 }
+
+
+section .main .buttons input[type=button]:hover{
+    box-shadow: 0 0 10px 3px #c93793;
+    transition: 0.2s;
+
+}
+
+section .main .buttons input[type=submit]:hover{
+    box-shadow: 0 0 10px 3px #c93793;
+    transition: 0.2s;
+}
+
+
 
 
 
